Display users profile image

--- a/Code/Templates/landLord.html
+++ b/Code/Templates/landLord.html
@@ -13,5 +13,6 @@
     <p>Password: {{ landLord['Password'] }}</p>
     <p>Phone #: {{ landLord['Mobile #'] }}</p>
     <p>Username: {{ landLord['Username'] }}</p>
+    <img src="../{{ landLord['profileImage'] }}">
 </body>
 </html>
