--- a/Templates/tenantWorkSubmission.html
+++ b/Templates/tenantWorkSubmission.html
@@ -9,12 +9,12 @@
 </head>
 
 <body>
-    <form action="/action_page.php">
+    <form action={{ url_for('workOrderSubmission') }} method="post">
         <p>Issue description: </p>
         <textarea name="issueDescription" rows="10" cols="50"></textarea>
         <br>
         <p>Priority: </p>
-        <input type="number" min="1" max="10"> 
+        <input type="number" min="1" max="10" name = "priority"> 
         <p>Image: </p>       
         <input type="file" name="image" />  
 
