--- a/Templates/tenantWorkSubmission.html
+++ b/Templates/tenantWorkSubmission.html
@@ -9,14 +9,14 @@
 </head>
 
 <body>
-    <form action={{ url_for('workOrderSubmission') }} method="post">
+    <form action={{ url_for('workOrderSubmission') }} method="post" enctype="multipart/form-data">
         <p>Issue description: </p>
         <textarea name="issueDescription" rows="10" cols="50"></textarea>
         <br>
         <p>Priority: </p>
         <input type="number" min="1" max="10" name = "priority"> 
         <p>Image: </p>       
-        <input type="file" name="image" />  
+        <input type="file" name="issueImage" />  
 
         <br> <br>
         <input type="submit">
