--- a/Templates/login.html
+++ b/Templates/login.html
@@ -8,12 +8,13 @@
     <div class="container">
       <h1>Please login</h1>
       <br>
-      <form action="" method="post">
+      <form action="{{ url_for('login')}}" method="post" >
         <input type="text" placeholder="Username" name="username" value="{{
           request.form.username }}">
          <input type="password" placeholder="Password" name="password" value="{{
           request.form.password }}">
-        <input class="btn btn-default" type="submit" value="Login">
+        <input class="btn btn-default" type="submit" name = "loginSubmit" value="Login As Tenant">
+        <input class="btn btn-default" type="submit" name = "loginSubmit" value="Login As Landlord">
       </form>
       {% if error %}
         <p class="error"><strong>Error:</strong> {{ error }}
