--- a/Templates/login.html
+++ b/Templates/login.html
@@ -1,14 +1,47 @@
 <html>
   <head>
+    <link rel="stylesheet" href="https://unpkg.com/@coreui/coreui/dist/css/coreui.min.css">
     <title>Flask Intro - login page</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="static/bootstrap.min.css" rel="stylesheet" media="screen">
   </head>
   <body>
     <div class="container">
-      <h1>Please login</h1>
+      <!-- <h1>Please login</h1> -->
       <br>
-      <form action="{{ url_for('login')}}" method="post" >
+
+<!-- core UI-->
+    <div class="card-body-auto">
+      <div class="card text-white bg-dark mb-3" style="max-width: 18rem;" >
+        <div class="card-header">
+          <h5 class="card-title">Please Login</h5>
+        </div>
+        <div class="card-body">
+          <!--<h5 class="card-title">Primary card title</h5>
+          <p class="card-text">Quick sample text to create the card title and make up the body of the card's content.</p> -->
+            <form action="{{ url_for('login')}}" method="post" >
+            <div class="form-row">
+              <div class="form-group col-auto">
+                <label for="inputEmail4">Email</label>
+                <input type="email" class="form-control form-control-sm" id="inputEmail4" placeholder="Email" value="{{
+                  request.form.username }}">
+              </div>
+              <div class="form-group col-auto">
+                <label for="inputPassword4">Password</label>
+                <input type="password" class="form-control form-control-sm" id="inputPassword4" placeholder="Password" value="{{
+                 request.form.password }}">
+              </div>
+              </div class="col-auto">
+                <button type="submit" class="btn btn-primary mb-2" value="Login As Tenant">Tenant Login</button>
+                <button type="submit" class="btn btn-primary mb-2" value="Login As Landlord">Landlord Login</button>
+              </div>
+            </form>
+          </div>
+      </div>
+
+<!--end Core UI-->
+
+      <!-- <form action="{{ url_for('login')}}" method="post" >
         <input type="text" placeholder="Username" name="username" value="{{
           request.form.username }}">
          <input type="password" placeholder="Password" name="password" value="{{
@@ -18,7 +51,7 @@
       </form>
       {% if error %}
         <p class="error"><strong>Error:</strong> {{ error }}
-      {% endif %}
+      {% endif %} -->
     </div>
   </body>
 </html>
