--- a/Templates/login.html
+++ b/Templates/login.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="static/bootstrap.min.css" rel="stylesheet" media="screen">
   </head>
-  <body>
+  <body style="background-color: gainsboro;">
     <div class="container">
       <!-- <h1>Please login</h1> -->
       <br>
 
 <!-- core UI-->
-    <div class="card-body-auto">
-      <div class="card text-white bg-dark mb-3" style="max-width: 18rem;" >
+    <div id= "card">
+      <div id= "card" class="card text-white bg-dark mb-3" style="max-width: 18rem;" >
         <div class="card-header">
           <h5 class="card-title">Please Login</h5>
         </div>
