--- a/Templates/login.html
+++ b/Templates/login.html
@@ -23,17 +23,18 @@
             <div class="form-row">
               <div class="form-group col-auto">
                 <label for="inputEmail4">Email</label>
-                <input type="email" class="form-control form-control-sm" id="inputEmail4" placeholder="Email" value="{{
-                  request.form.username }}">
+                <input type="text" class="form-control form-control-sm" id="inputEmail4" placeholder="Username" 
+                name = "username" value="{{request.form.username }}">
               </div>
               <div class="form-group col-auto">
                 <label for="inputPassword4">Password</label>
-                <input type="password" class="form-control form-control-sm" id="inputPassword4" placeholder="Password" value="{{
+                <input type="password" class="form-control form-control-sm" id="inputPassword4" 
+                name = "password" placeholder="Password" value="{{
                  request.form.password }}">
               </div>
               </div class="col-auto">
-                <button type="submit" class="btn btn-primary mb-2" value="Login As Tenant">Tenant Login</button>
-                <button type="submit" class="btn btn-primary mb-2" value="Login As Landlord">Landlord Login</button>
+                <button type="submit" class="btn btn-primary mb-2" name = "loginSubmit" value="Login As Tenant">Tenant Login</button>
+                <button type="submit" class="btn btn-primary mb-2" name = "loginSubmit" value="Login As Landlord">Landlord Login</button>
               </div>
             </form>
           </div>
