--- a/Templates/login.html
+++ b/Templates/login.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <link rel="stylesheet" href="https://unpkg.com/@coreui/coreui/dist/css/coreui.min.css">
-    <title>Flask Intro - login page</title>
+    <title>Property Management - Login</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="static/bootstrap.min.css" rel="stylesheet" media="screen">
   </head>
