--- a/Templates/tenant.html
+++ b/Templates/tenant.html
@@ -1,4 +1,19 @@
-<!DOCTYPE html>
+{% extends "tenantBase.html" %}
+ 
+{% block content %}
+    <p>First Name: {{ tenant['First Name'] }}</p>
+    <p>Last Name: {{ tenant['Last Name'] }}</p>
+    <p>Username: {{ tenant['Username'] }}</p>
+
+    <form action = {{ url_for('changeAvatar')}} method = "post" enctype="multipart/form-data">  
+        <input type="file" name="image" />  
+        <input type = "submit" value="Upload">  
+    </form>  
+
+    <img src="../{{tenant['profileImage']}}">
+{% endblock %}
+
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -18,4 +33,4 @@
 
     <img src="../{{tenant['profileImage']}}">
 </body>
-</html>
+</html> -->
