--- a/Templates/tenantWorkSubmission.html
+++ b/Templates/tenantWorkSubmission.html
@@ -1,26 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends "tenantBase.html" %}
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-</head>
-
-<body>
+{% block content %}
     <form action={{ url_for('workOrderSubmission') }} method="post" enctype="multipart/form-data">
         <p>Issue description: </p>
         <textarea name="issueDescription" rows="10" cols="50"></textarea>
         <br>
         <p>Priority: </p>
-        <input type="number" min="1" max="10" name = "priority"> 
-        <p>Image: </p>       
-        <input type="file" name="issueImage" />  
+        <input type="number" min="1" max="10" name="priority">
+        <p>Image: </p>
+        <input type="file" name="issueImage" />
 
         <br> <br>
         <input type="submit">
     </form>
-</body>
-
-</html>
+{% endblock %}
