Update page titles

--- a/Templates/tenant.html
+++ b/Templates/tenant.html
@@ -1,5 +1,5 @@
 {% extends "tenantBase.html" %}
- 
+{% block title %}Tenant - Home{% endblock %}
 {% block content %}
     <p>First Name: {{ tenant['First Name'] }}</p>
     <p>Last Name: {{ tenant['Last Name'] }}</p>
