--- a/Templates/tenantBase.html
+++ b/Templates/tenantBase.html
@@ -1,19 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>{% block title %}{% endblock %}</title>
 </head>
+
 <body>
     <h1>Navbar...</h1>
+
     <nav>
         <ul>
             <li> <a href="{{ url_for('showTenantProfile')}}"> Home </a> </li>
             <li> <a href="{{ url_for('workOrderSubmission')}}"> Work Order Submission</a> </li>
         </ul>
     </nav>
+
     {% block content %} {% endblock %}
 </body>
+
 </html>
