--- a/Templates/tenantWorkSubmission.html
+++ b/Templates/tenantWorkSubmission.html
@@ -1,5 +1,7 @@
 {% extends "tenantBase.html" %}
 
+{% block title %}Tenant - Work Order Submission{% endblock %}
+
 {% block content %}
     <form action={{ url_for('workOrderSubmission') }} method="post" enctype="multipart/form-data">
         <p>Issue description: </p>
