--- a/Templates/login.html
+++ b/Templates/login.html
@@ -22,7 +22,7 @@
             <form action="{{ url_for('login')}}" method="post" >
             <div class="form-row">
               <div class="form-group col-auto">
-                <label for="inputEmail4">Email</label>
+                <label for="inputEmail4">Username</label>
                 <input type="text" class="form-control form-control-sm" id="inputEmail4" placeholder="Username" 
                 name = "username" value="{{request.form.username }}">
               </div>
