--- a/Templates/landLord.html
+++ b/Templates/landLord.html
@@ -1,24 +1,23 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-</head>
-<body>
-    <p>First Name: {{ landLord['First Name'] }}</p>
-    <p>Last Name: {{ landLord['Last Name'] }}</p>
-    <p>Email: {{ landLord['Email'] }}</p>
-    <p>Password: {{ landLord['Password'] }}</p>
-    <p>Phone #: {{ landLord['Mobile #'] }}</p>
-    <p>Username: {{ landLord['Username'] }}</p>
+{% extends "landLordBase.html" %}
 
-    <form action = {{ url_for('changeAvatar')}} method = "post" enctype="multipart/form-data">  
-        <input type="file" name="image" />  
-        <input type = "submit" value="Upload">  
-    </form>  
+{% block title %}Landlord - Home{% endblock %}
 
+{% block content %}
+
+<p>First Name: {{ landLord['First Name'] }}</p>
+<p>Last Name: {{ landLord['Last Name'] }}</p>
+<p>Email: {{ landLord['Email'] }}</p>
+<p>Password: {{ landLord['Password'] }}</p>
+<p>Phone #: {{ landLord['Mobile #'] }}</p>
+<p>Username: {{ landLord['Username'] }}</p>
+
+<form action={{ url_for('changeAvatar')}} method="post" enctype="multipart/form-data">
+    <input type="file" name="image" />
+    <input type="submit" value="Upload">
+</form>
+
+<div class="profileImageWrapper">
     <img src="../{{landLord['profileImage']}}">
-</body>
-</html>
+</div>
+
+{% endblock %}
