Display all of landlord properties

--- a/Templates/landLordBase.html
+++ b/Templates/landLordBase.html
@@ -14,8 +14,8 @@
 
     <nav>
         <ul>
-            <li> <a href="{{ url_for('showTenantProfile')}}"> Home </a> </li>
-            <li> <a href="{{ url_for('workOrderSubmission')}}"> Work Order Submission</a> </li>
+            <li> <a href="{{ url_for('showLandLordProfile')}}"> Home </a> </li>
+            <li> <a href="{{ url_for('showLandLordProperties')}}"> My Properties </a> </li>
         </ul>
     </nav>
 
