Display property issues

--- a/Templates/tenant.html
+++ b/Templates/tenant.html
@@ -10,7 +10,7 @@
     <input type="submit" value="Upload">
 </form>
 
-<div class="profileImageWrapper">
+<div class="imageWrapper">
     <img class="profileImage" src="../{{tenant['profileImage']}}">
 </div>
 {% endblock %}
