--- a/Templates/landLord.html
+++ b/Templates/landLord.html
@@ -16,7 +16,7 @@
     <input type="submit" value="Upload">
 </form>
 
-<div class="profileImageWrapper">
+<div class="imageWrapper">
     <img src="../{{landLord['profileImage']}}">
 </div>
 
