--- a/Templates/landLordBase.html
+++ b/Templates/landLordBase.html
@@ -16,6 +16,7 @@
         <ul>
             <li> <a href="{{ url_for('showLandLordProfile')}}"> Home </a> </li>
             <li> <a href="{{ url_for('showLandLordProperties')}}"> My Properties </a> </li>
+            <li> <a href="{{ url_for('showPropertyIssues')}}"> Property Issues </a> </li>
         </ul>
     </nav>
 
