--- a/Templates/landLordBase.html
+++ b/Templates/landLordBase.html
@@ -10,13 +10,12 @@
     <title>{% block title %}{% endblock %}</title>
 </head>
 <body>
-    <h1>Navbar...</h1>
-
     <nav>
         <ul>
             <li> <a href="{{ url_for('showLandLordProfile')}}"> Home </a> </li>
             <li> <a href="{{ url_for('showLandLordProperties')}}"> My Properties </a> </li>
-            <li> <a href="{{ url_for('showPropertyIssues')}}"> Property Issues </a> </li>
+            <li> <a href="{{ url_for('showUnresolvedPropertyIssues')}}"> Unresolved Property Issues </a> </li>
+            <li> <a href="{{ url_for('showResolvedPropertyIssues')}}"> Resolved Property Issues </a> </li>
         </ul>
     </nav>
 
