Change page titles

--- a/Templates/landLordUnresolvedPropertyIssues.html
+++ b/Templates/landLordUnresolvedPropertyIssues.html
@@ -1,6 +1,6 @@
 {% extends "landLordBase.html" %}
 
-{% block title %}Landlord - unresolved Property Issues{% endblock %}
+{% block title %}Landlord - Unresolved Property Issues{% endblock %}
 
 {% block content %}
 
