--- a/Templates/landLordProperties.html
+++ b/Templates/landLordProperties.html
@@ -1,6 +1,6 @@
 {% extends "landLordBase.html" %}
 
-{% block title %}Landlord - Home{% endblock %}
+{% block title %}Landlord - Properties{% endblock %}
 
 {% block content %}
 <h2>Properties</h2>
