--- a/Templates/landLordUnresolvedPropertyIssues.html
+++ b/Templates/landLordUnresolvedPropertyIssues.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 
-<p>property issues</p>
+<h1>Property Issues</h1>
 
 {% for key, value in propertyIssues.items() %}
     {% set property = value[0] %}
