--- a/Templates/login.html
+++ b/Templates/login.html
@@ -37,10 +37,12 @@
                  request.form.password }}">
                             </div>
                         </div class="col-auto">
-                        <button type="submit" class="btn btn-primary mb-1" name="loginSubmit"
+                        <button type="submit" class="btn btn-primary mb-2" name="loginSubmit"
                             value="Login As Tenant">Tenant Login</button>
                         <button type="submit" class="btn btn-primary mb-2" name="loginSubmit"
                             value="Login As Landlord">Landlord Login</button>
+                        <button type="Submit" class="btn btn-primary mb-2" name="Register"
+                            value="Register as landlord">Register</button>
                 </div>
                 </form>
             </div>
