--- a/Templates/login.html
+++ b/Templates/login.html
@@ -42,7 +42,7 @@
                         <button type="submit" class="btn btn-primary mb-2" name="loginSubmit"
                             value="Login As Landlord">Landlord Login</button>
                         <button type="Submit" class="btn btn-primary mb-2" name="Register"
-                            value="Register as landlord">Register</button>
+                            value="Register as landlord">Register As Landlord</button>
                 </div>
                 </form>
             </div>
