--- a/Templates/login.html
+++ b/Templates/login.html
@@ -41,7 +41,7 @@
                             value="Login As Tenant">Tenant Login</button>
                         <button type="submit" class="btn btn-primary mb-2" name="loginSubmit"
                             value="Login As Landlord">Landlord Login</button>
-                        <button id="registerbtn" type="Submit" class="btn btn-primary mb-2" name="loginSubmit"
+                        <button id="registerbtn" type="Submit" class="btn btn-primary" name="loginSubmit"
                             value="Register as landlord">Register As Landlord</button>
                 </div>
                 </form>
