--- a/Templates/login.html
+++ b/Templates/login.html
@@ -3,8 +3,8 @@
 <head>
     <link rel="stylesheet" href="https://unpkg.com/@coreui/coreui/dist/css/coreui.min.css">
     <title>Property Management - Login</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/Login.css') }}">
     <link rel="stylesheet" href="css/Login.css">
-
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="static/bootstrap.min.css" rel="stylesheet" media="screen">
 </head>
@@ -41,10 +41,9 @@
                             value="Login As Tenant">Tenant Login</button>
                         <button type="submit" class="btn btn-primary mb-2" name="loginSubmit"
                             value="Login As Landlord">Landlord Login</button>
-
-                <form action="{{ url_for('registerAsLandlord')}}" method="GET">
-                    <button id="registerbtn" type="Submit" class="btn btn-primary mb-2" name="loginSubmit"
-                    value="Register as landlord">Register As Landlord</button>
+                        <button id="registerbtn" type="Submit" class="btn btn-primary" name="loginSubmit"
+                            value="Register as landlord">Register As Landlord</button>
+                </div>
                 </form>
             </div>
         </div>
