--- a/Templates/login.html
+++ b/Templates/login.html
@@ -41,9 +41,12 @@
                             value="Login As Tenant">Tenant Login</button>
                         <button type="submit" class="btn btn-primary mb-2" name="loginSubmit"
                             value="Login As Landlord">Landlord Login</button>
-                        <button id="registerbtn" type="Submit" class="btn btn-primary" name="loginSubmit"
-                            value="Register as landlord">Register As Landlord</button>
                 </div>
+                </form>
+
+                <form action="{{ url_for('registerAsLandlord')}}" method="GET">
+                    <button id="registerbtn" type="Submit" class="btn btn-primary mb-2" name="loginSubmit"
+                    value="Register as landlord">Register As Landlord</button>
                 </form>
             </div>
         </div>
