--- a/Templates/login.html
+++ b/Templates/login.html
@@ -10,6 +10,12 @@
 </head>
 
 <body style="background-color: gainsboro;">
+  <div id="jumbo" class="jumbotron jumbotron-fluid">
+<div class="container">
+  <h1 class="display-4">Manage360</h1>
+  <p class="lead">A 360 View of Your Property</p>
+</div>
+</div>
     <div class="container">
         <!-- <h1>Please login</h1> -->
         <br>
