--- a/Templates/login.html
+++ b/Templates/login.html
@@ -4,7 +4,6 @@
     <link rel="stylesheet" href="https://unpkg.com/@coreui/coreui/dist/css/coreui.min.css">
     <title>Property Management - Login</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/Login.css') }}">
-    
     <link rel="stylesheet" href="css/Login.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="static/bootstrap.min.css" rel="stylesheet" media="screen">
@@ -13,8 +12,8 @@
 <body style="background-color: gainsboro;">
   <div id="jumbo" class="jumbotron jumbotron-fluid">
 <div class="container">
-  <h1 class="display-4">Manage360</h1>
-  <p class="lead">A 360 View of Your Property</p>
+  <h1 class="display-4 center">Manage360</h1>
+  <p class="lead center">A 360 View of Your Property</p>
 </div>
 </div>
     <div class="container">
