Add sign out link

--- a/Templates/landLordBase.html
+++ b/Templates/landLordBase.html
@@ -16,6 +16,7 @@
             <li> <a href="{{ url_for('showLandLordProperties')}}"> My Properties </a> </li>
             <li> <a href="{{ url_for('showUnresolvedPropertyIssues')}}"> Unresolved Property Issues </a> </li>
             <li> <a href="{{ url_for('showResolvedPropertyIssues')}}"> Resolved Property Issues </a> </li>
+            <li> <a href="{{ url_for('login')}}"> Sign Out </a> </li>
         </ul>
     </nav>
 
