--- a/Templates/tenantBase.html
+++ b/Templates/tenantBase.html
@@ -16,6 +16,7 @@
         <ul>
             <li> <a href="{{ url_for('showTenantProfile')}}"> Home </a> </li>
             <li> <a href="{{ url_for('workOrderSubmission')}}"> Work Order Submission</a> </li>
+            <li> <a href="{{ url_for('login')}}"> Sign Out </a> </li>
         </ul>
     </nav>
 
